CREATE TABLE contest (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    canonical_key VARCHAR(255) NOT NULL UNIQUE,
    name VARCHAR(255) NOT NULL,
    region VARCHAR(32) NOT NULL,
    place VARCHAR(255) NOT NULL,
    road_address VARCHAR(255),
    lat NUMERIC(10, 7),
    lng NUMERIC(10, 7),
    contest_date DATE NOT NULL,
    start_time TIME,
    source_status VARCHAR(32),
    apply_start DATE,
    apply_end DATE,
    organizer VARCHAR(255),
    official_url VARCHAR(2048),
    detail_url VARCHAR(2048),
    image_url VARCHAR(2048),
    category VARCHAR(32) NOT NULL,
    active BOOLEAN NOT NULL DEFAULT TRUE,
    checked_at TIMESTAMPTZ NOT NULL,
    updated_at TIMESTAMPTZ NOT NULL,
    CONSTRAINT ck_contest_category
        CHECK (category IN ('ROAD', 'TRAIL', 'WALK', 'NIGHT')),
    CONSTRAINT ck_contest_source_status
        CHECK (source_status IS NULL OR source_status IN ('OPEN', 'CLOSED', 'BEFORE', 'UNKNOWN'))
);

CREATE TABLE contest_source (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    contest_id BIGINT NOT NULL REFERENCES contest(id) ON DELETE CASCADE,
    source_type VARCHAR(32) NOT NULL,
    external_id VARCHAR(255) NOT NULL,
    source_url VARCHAR(2048),
    raw_status VARCHAR(32),
    active BOOLEAN NOT NULL DEFAULT TRUE,
    consecutive_missing_count INTEGER NOT NULL DEFAULT 0,
    fetched_at TIMESTAMPTZ NOT NULL,
    raw_payload JSONB NOT NULL,
    CONSTRAINT uk_contest_source_identity UNIQUE (source_type, external_id),
    CONSTRAINT ck_contest_source_type
        CHECK (source_type IN ('MARATHON_ONLINE', 'MARATHON_GO')),
    CONSTRAINT ck_contest_source_missing_count
        CHECK (consecutive_missing_count BETWEEN 0 AND 2)
);

CREATE TABLE contest_event (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    contest_id BIGINT NOT NULL REFERENCES contest(id) ON DELETE CASCADE,
    event_type VARCHAR(32) NOT NULL,
    CONSTRAINT uk_contest_event UNIQUE (contest_id, event_type),
    CONSTRAINT ck_contest_event_type
        CHECK (event_type IN ('K5', 'K10', 'HALF', 'FULL'))
);

CREATE TABLE contest_snapshot_import (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    schema_version INTEGER NOT NULL,
    snapshot_sha256 VARCHAR(64) NOT NULL,
    source_sha256 VARCHAR(64) NOT NULL,
    checked_at_max TIMESTAMPTZ NOT NULL UNIQUE,
    applied_at TIMESTAMPTZ NOT NULL,
    CONSTRAINT uk_contest_snapshot_identity UNIQUE (snapshot_sha256, checked_at_max)
);
