CREATE TABLE app_user (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    nickname VARCHAR(12) NOT NULL,
    nickname_key VARCHAR(12) NOT NULL,
    created_at TIMESTAMPTZ NOT NULL,
    updated_at TIMESTAMPTZ NOT NULL,
    CONSTRAINT uk_app_user_nickname_key UNIQUE (nickname_key)
);

CREATE TABLE login_identity (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id BIGINT NOT NULL REFERENCES app_user(id) ON DELETE CASCADE,
    provider VARCHAR(32) NOT NULL,
    provider_subject VARCHAR(320) NOT NULL,
    email_snapshot VARCHAR(320),
    password_hash VARCHAR(255),
    email_verified_at TIMESTAMPTZ,
    created_at TIMESTAMPTZ NOT NULL,
    last_login_at TIMESTAMPTZ,
    CONSTRAINT uk_login_identity_user UNIQUE (user_id),
    CONSTRAINT uk_login_identity_provider_subject UNIQUE (provider, provider_subject),
    CONSTRAINT ck_login_identity_provider CHECK (provider IN ('EMAIL', 'KAKAO')),
    CONSTRAINT ck_login_identity_fields CHECK (
        (provider = 'EMAIL'
            AND password_hash IS NOT NULL
            AND email_verified_at IS NOT NULL
            AND email_snapshot IS NULL)
        OR
        (provider = 'KAKAO'
            AND password_hash IS NULL
            AND email_verified_at IS NULL)
    )
);

CREATE TABLE email_verification (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    email VARCHAR(320) NOT NULL,
    purpose VARCHAR(32) NOT NULL,
    code_hash VARCHAR(255),
    token_hash VARCHAR(64),
    attempts INTEGER NOT NULL DEFAULT 0,
    sent_at TIMESTAMPTZ NOT NULL,
    expires_at TIMESTAMPTZ NOT NULL,
    verified_at TIMESTAMPTZ,
    consumed_at TIMESTAMPTZ,
    CONSTRAINT uk_email_verification_email_purpose UNIQUE (email, purpose),
    CONSTRAINT ck_email_verification_purpose CHECK (purpose IN ('SIGNUP', 'PASSWORD_RESET')),
    CONSTRAINT ck_email_verification_attempts CHECK (attempts BETWEEN 0 AND 5),
    CONSTRAINT ck_email_verification_hash CHECK (
        (purpose = 'SIGNUP' AND code_hash IS NOT NULL AND token_hash IS NULL)
        OR
        (purpose = 'PASSWORD_RESET' AND code_hash IS NULL AND token_hash IS NOT NULL)
    )
);
