CREATE TABLE user_agreement (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id BIGINT NOT NULL REFERENCES app_user(id) ON DELETE CASCADE,
    agreement_type VARCHAR(32) NOT NULL,
    version VARCHAR(32) NOT NULL,
    agreed BOOLEAN NOT NULL,
    changed_at TIMESTAMPTZ NOT NULL,
    CONSTRAINT ck_user_agreement_type CHECK (
        agreement_type IN ('TOS', 'PRIVACY', 'MARKETING')
    )
);

CREATE INDEX idx_user_agreement_user_changed
    ON user_agreement(user_id, changed_at DESC, id DESC);

CREATE TABLE refresh_token (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id BIGINT NOT NULL REFERENCES app_user(id) ON DELETE CASCADE,
    family_id UUID NOT NULL,
    token_hash VARCHAR(64) NOT NULL,
    expires_at TIMESTAMPTZ NOT NULL,
    revoked_at TIMESTAMPTZ,
    created_at TIMESTAMPTZ NOT NULL,
    CONSTRAINT uk_refresh_token_hash UNIQUE (token_hash)
);

CREATE UNIQUE INDEX uk_refresh_token_active_family
    ON refresh_token(family_id)
    WHERE revoked_at IS NULL;

CREATE INDEX idx_refresh_token_user
    ON refresh_token(user_id);
