CREATE TABLE itinerary (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id BIGINT NOT NULL REFERENCES app_user(id) ON DELETE CASCADE,
    contest_id BIGINT NOT NULL REFERENCES contest(id) ON DELETE RESTRICT,
    title VARCHAR(255) NOT NULL,
    event VARCHAR(32) NOT NULL CHECK (event IN ('K5', 'K10', 'HALF', 'FULL')),
    themes JSONB NOT NULL,
    start_date DATE NOT NULL,
    end_date DATE NOT NULL,
    hotel_name VARCHAR(255),
    hotel_lat NUMERIC(10, 7),
    hotel_lng NUMERIC(10, 7),
    region_snapshot VARCHAR(32) NOT NULL,
    recovery_label VARCHAR(255),
    recovery_note TEXT,
    created_at TIMESTAMPTZ NOT NULL,
    updated_at TIMESTAMPTZ NOT NULL,
    CONSTRAINT ck_itinerary_period CHECK (start_date <= end_date),
    CONSTRAINT uq_itinerary_trip UNIQUE (user_id, contest_id, start_date, end_date)
);

CREATE INDEX idx_itinerary_user_created
    ON itinerary (user_id, created_at DESC, id DESC);

CREATE TABLE itinerary_day (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    itinerary_id BIGINT NOT NULL REFERENCES itinerary(id) ON DELETE CASCADE,
    day_index INTEGER NOT NULL,
    day_date DATE NOT NULL,
    recovery BOOLEAN NOT NULL,
    note TEXT,
    CONSTRAINT uq_itinerary_day_index
        UNIQUE (itinerary_id, day_index) DEFERRABLE INITIALLY DEFERRED
);

CREATE INDEX idx_itinerary_day_itinerary
    ON itinerary_day (itinerary_id, day_index);

CREATE TABLE itinerary_block (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    day_id BIGINT NOT NULL REFERENCES itinerary_day(id) ON DELETE CASCADE,
    contest_id BIGINT REFERENCES contest(id) ON DELETE RESTRICT,
    block_type VARCHAR(32) NOT NULL CHECK (block_type IN ('USER', 'RACE')),
    system_managed BOOLEAN NOT NULL,
    order_no INTEGER NOT NULL CHECK (order_no >= 0),
    start_time TIME WITHOUT TIME ZONE NOT NULL,
    title VARCHAR(255) NOT NULL,
    category VARCHAR(32) NOT NULL CHECK (
        category IN ('TOUR', 'FOOD', 'CAFE', 'WELLNESS', 'NATURE',
                     'HISTORY', 'LODGING', 'RACE', 'RECOVERY')
    ),
    place_name VARCHAR(255),
    address VARCHAR(255),
    lat NUMERIC(10, 7),
    lng NUMERIC(10, 7),
    description TEXT,
    CONSTRAINT ck_itinerary_block_owner CHECK (
        (block_type = 'RACE' AND system_managed AND contest_id IS NOT NULL AND category = 'RACE')
        OR
        (block_type = 'USER' AND NOT system_managed AND contest_id IS NULL AND category <> 'RACE')
    ),
    CONSTRAINT uq_itinerary_block_day_order
        UNIQUE (day_id, order_no) DEFERRABLE INITIALLY DEFERRED
);

CREATE INDEX idx_itinerary_block_day
    ON itinerary_block (day_id, order_no);
