CREATE TABLE favorite (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id BIGINT NOT NULL REFERENCES app_user(id) ON DELETE CASCADE,
    contest_id BIGINT NOT NULL REFERENCES contest(id) ON DELETE RESTRICT,
    created_at TIMESTAMPTZ NOT NULL,
    CONSTRAINT uq_favorite_user_contest UNIQUE (user_id, contest_id)
);

CREATE INDEX idx_favorite_user_created
    ON favorite (user_id, created_at DESC, id DESC);
