CREATE TABLE saved_course (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id BIGINT NOT NULL REFERENCES app_user(id) ON DELETE CASCADE,
    route_fingerprint VARCHAR(67) NOT NULL,
    data_source VARCHAR(32) NOT NULL CHECK (
        data_source IN ('API_GPX', 'GPX_ONLY', 'OSM_GENERATED')
    ),
    source_course_id VARCHAR(255),
    course_name VARCHAR(255) NOT NULL,
    region VARCHAR(32),
    distance_km NUMERIC(8, 3) NOT NULL CHECK (distance_km > 0),
    duration_min INTEGER NOT NULL CHECK (duration_min > 0),
    difficulty VARCHAR(32) CHECK (difficulty IN ('EASY', 'NORMAL', 'HARD')),
    gain_m INTEGER NOT NULL CHECK (gain_m >= 0),
    elevation_profile_m JSONB NOT NULL DEFAULT '[]'::jsonb,
    attributions JSONB NOT NULL DEFAULT '[]'::jsonb,
    entry_lat NUMERIC(10, 7) NOT NULL CHECK (entry_lat BETWEEN -90 AND 90),
    entry_lng NUMERIC(10, 7) NOT NULL CHECK (entry_lng BETWEEN -180 AND 180),
    path_polyline TEXT NOT NULL,
    saved_at TIMESTAMPTZ NOT NULL,
    CONSTRAINT uq_saved_course_user_fingerprint
        UNIQUE (user_id, route_fingerprint),
    CONSTRAINT ck_saved_course_fingerprint_format CHECK (
        route_fingerprint ~ '^v1:[0-9a-f]{64}$'
    ),
    CONSTRAINT ck_saved_course_elevation_array CHECK (
        jsonb_typeof(elevation_profile_m) = 'array'
        AND jsonb_array_length(elevation_profile_m) <= 100
    ),
    CONSTRAINT ck_saved_course_attributions_array CHECK (
        jsonb_typeof(attributions) = 'array'
    ),
    CONSTRAINT ck_saved_course_source_fields CHECK (
        (
            data_source = 'OSM_GENERATED'
            AND source_course_id IS NULL
            AND region IS NULL
        )
        OR
        (
            data_source IN ('API_GPX', 'GPX_ONLY')
            AND source_course_id IS NOT NULL
            AND region IS NOT NULL
        )
    )
);

CREATE INDEX idx_saved_course_user_saved
    ON saved_course (user_id, saved_at DESC, id DESC);
