%% 런닝구 논리 ERD v4.5 — SPEC v4 · API 명세 v3.1 기준 (2026-08-23)
%% P0: USER~SAVED_COURSE + CONTEST_SNAPSHOT_IMPORT 14개
%% 러닝 기록 엔티티는 제거했다 — GPS 기록을 제품에서 뺐다(SPEC 결정-56 · 이슈 #215)
%% 이 문서는 논리 계약이다. 물리 DB 계약은 모두 확정됐다 (TBD-P1-01 은 SPEC 결정-56 으로 사라졌다).
%% 확정-DB-01 path_polyline=2D Google Encoded Polyline precision 5(E5), route_fingerprint=v1: + SHA-256 lowercase hex, 고정 5자리 lat,lng canonical geometry, 진행 순서 유지, 연속 중복점 제거, VARCHAR(67), elevation_profile_m=JSONB NOT NULL DEFAULT '[]'·최대 100개 정수
%% 확정-DB-02 SAVED_COURSE.attributions=JSONB NOT NULL DEFAULT '[]', 서버 생성 완성 문구 snapshot, 상세만 반환, fingerprint 제외
%% 확정-DB-03 USER:LOGIN_IDENTITY=1:1, 가입 시 EMAIL/KAKAO 중 하나, P0 연결·추가·전환 미지원
%% 확정-DB-04 ITINERARY region·recovery·트리/RACE는 snapshot, contestName·현재 대회 메타는 CONTEST 파생, needs_regeneration은 비교 파생
%% 확정-DB-05 검증 완료 full snapshot 2회 연속 누락 시 SOURCE 비활성, 활성 SOURCE가 없는 CONTEST 비활성, 재등장 즉시 복구, 물리 삭제 없음
%% 확정-DB-06 externalId/external_id, SIGNUP/PASSWORD_RESET, fetchedAt/fetched_at, organizer 명칭 통일
%% 확정-DB-07 사용자·aggregate 자식 CASCADE, 대회 참조 RESTRICT, Enum VARCHAR+CHECK, 좌표 NUMERIC(10,7), nullable 명시
%% 확정-DB-08 CONTEST start_time·road_address·detail_url nullable, 적용 snapshot 이력은 CONTEST_SNAPSHOT_IMPORT에 원자 기록
%% 확정-DB-09 물리 USER 테이블명 app_user, nickname_key=trim 후 ASCII lowercase UNIQUE, EMAIL_VERIFICATION(email,purpose) UNIQUE
%% 확정-DB-10 REFRESH_TOKEN family_id UUID, family별 revoked_at IS NULL 부분 UNIQUE, 과거 토큰 재사용 시 같은 family 활성 토큰 revoke
%% DB-07 타입 규약: nickname VARCHAR(12), email VARCHAR(320), Enum VARCHAR(32), key/name/title/place VARCHAR(255), URL VARCHAR(2048), token hash VARCHAR(64), password/code hash VARCHAR(255), 거리 NUMERIC(8,3), 자유문 TEXT
%% DB-07 null 규약: "nullable" 표기가 없는 저장 컬럼은 NOT NULL, derived는 DB 컬럼이 아님
%% DB-07 CHECK: LOGIN_IDENTITY는 EMAIL(password_hash·email_verified_at 필수, email_snapshot null) 또는 KAKAO(password_hash·email_verified_at null)
%% DB-07 CHECK: EMAIL_VERIFICATION은 SIGNUP(code_hash 사용) 또는 PASSWORD_RESET(token_hash 사용), 다른 hash는 null
%% DB-07 주요 조회 인덱스: CONTEST(contest_date,id), CONTEST(region,contest_date,id), FAVORITE(user_id,created_at,id), ITINERARY(user_id,created_at,id), SAVED_COURSE(user_id,saved_at,id)

erDiagram
    USER ||--|| LOGIN_IDENTITY : "가입 수단 1개 · CASCADE"
    USER ||--o{ USER_AGREEMENT : "약관 동의 이력 · CASCADE"
    USER ||--o{ REFRESH_TOKEN : "세션 · CASCADE"
    USER ||--o{ FAVORITE : "찜 · CASCADE"
    USER ||--o{ ITINERARY : "저장 동선 · CASCADE"
    USER ||--o{ SAVED_COURSE : "저장 코스 · CASCADE"

    CONTEST ||--|{ CONTEST_SOURCE : "canonical 원천 · CASCADE"
    CONTEST ||--o{ CONTEST_EVENT : "표준 종목 · CASCADE"
    CONTEST ||--o{ FAVORITE : "찜 대상 · RESTRICT"
    CONTEST ||--o{ ITINERARY : "대상 대회 · RESTRICT"
    CONTEST o|--o{ ITINERARY_BLOCK : "RACE 선택 참조 · RESTRICT"

    ITINERARY ||--|{ ITINERARY_DAY : "일자 · CASCADE"
    ITINERARY_DAY ||--o{ ITINERARY_BLOCK : "일정 블록 · CASCADE"

    USER {
        bigint id PK
        varchar nickname "trim 후 코드포인트 2~12자, 표시 표기 보존"
        varchar nickname_key UK "ASCII 영문 대소문자 무시 중복 키"
        derived representative_email "EMAIL=subject, KAKAO=snapshot|null; null이면 UI 행 숨김"
        timestamptz created_at "UTC 저장"
        timestamptz updated_at "UTC 저장"
    }

    LOGIN_IDENTITY {
        bigint id PK
        bigint user_id FK, UK "USER당 정확히 1행, ON DELETE CASCADE"
        varchar provider "CHECK EMAIL / KAKAO"
        varchar provider_subject "UNIQUE(provider, provider_subject), EMAIL=정규화 이메일, KAKAO=회원번호"
        varchar email_snapshot "nullable, KAKAO 제공 이메일만"
        varchar password_hash "EMAIL 필수, KAKAO null"
        timestamptz email_verified_at "EMAIL 필수, KAKAO null"
        timestamptz created_at "가입 수단 생성 시각"
        timestamptz last_login_at "nullable, 최초 로그인 전 null"
    }

    USER_AGREEMENT {
        bigint id PK
        bigint user_id FK "ON DELETE CASCADE"
        varchar agreement_type "CHECK TOS / PRIVACY / MARKETING"
        varchar version
        boolean agreed
        timestamptz changed_at "append-only"
    }

    EMAIL_VERIFICATION {
        bigint id PK
        varchar email UK "정규화 이메일, 가입 전이라 USER FK 없음"
        varchar purpose UK "UNIQUE(email,purpose), CHECK SIGNUP / PASSWORD_RESET"
        varchar code_hash "nullable, SIGNUP 6자리 코드 해시"
        varchar token_hash "nullable, PASSWORD_RESET 토큰 해시"
        int attempts "최대 5회"
        timestamptz sent_at "재발송 60초 판정"
        timestamptz expires_at "코드 10분 / 재설정 30분"
        timestamptz verified_at "nullable, 가입 인증 후 30분 유효 기준"
        timestamptz consumed_at "nullable, 1회 사용 시각"
    }

    REFRESH_TOKEN {
        bigint id PK
        bigint user_id FK "ON DELETE CASCADE"
        uuid family_id "기기 로그인 세션 family"
        varchar token_hash UK "원문 저장 금지"
        timestamptz expires_at
        timestamptz revoked_at "nullable"
        timestamptz created_at
    }

    CONTEST {
        bigint id PK
        varchar canonical_key UK "Python snapshot의 안정적 유일키"
        varchar name
        varchar region "17개 시도"
        varchar place
        varchar road_address "nullable"
        numeric lat "nullable, NUMERIC(10,7), WGS84"
        numeric lng "nullable, NUMERIC(10,7), WGS84"
        date contest_date "KST 비즈니스 날짜"
        time start_time "nullable"
        varchar source_status "nullable, 날짜 판정 불가 시 폴백"
        date apply_start "nullable"
        date apply_end "nullable"
        varchar organizer "nullable"
        varchar official_url "nullable"
        varchar detail_url "nullable"
        varchar image_url "nullable"
        varchar category "CHECK ROAD / TRAIL / WALK / NIGHT"
        boolean active "DEFAULT true, 활성 source가 하나라도 있으면 true"
        timestamptz checked_at "원천 중 최신 확인 시각"
        timestamptz updated_at
    }

    CONTEST_SOURCE {
        bigint id PK
        bigint contest_id FK "ON DELETE CASCADE"
        varchar source_type "CHECK MARATHON_ONLINE / MARATHON_GO"
        varchar external_id "UNIQUE(source_type, external_id)"
        varchar source_url "nullable"
        varchar raw_status "nullable, 원천 상태"
        boolean active "DEFAULT true, 재등장 시 true"
        int consecutive_missing_count "DEFAULT 0, CHECK 0..2"
        timestamptz fetched_at
        jsonb raw_payload "감사·재병합용 원천 스냅샷"
    }

    CONTEST_EVENT {
        bigint id PK
        bigint contest_id FK "ON DELETE CASCADE"
        varchar event_type "CHECK K5 / K10 / HALF / FULL, UNIQUE(contest_id, event_type)"
    }

    CONTEST_SNAPSHOT_IMPORT {
        bigint id PK
        int schema_version
        varchar snapshot_sha256 "VARCHAR(64), UNIQUE(snapshot_sha256, checked_at_max)"
        varchar source_sha256 "VARCHAR(64), 입력 CSV 출처 추적용"
        timestamptz checked_at_max UK "UTC, 과거·동일 시각 다른 snapshot hash 거부"
        timestamptz applied_at "UTC, 성공 트랜잭션 완료 시각"
    }

    FAVORITE {
        bigint id PK
        bigint user_id FK "ON DELETE CASCADE"
        bigint contest_id FK "ON DELETE RESTRICT"
        timestamptz created_at "user_id, contest_id 복합 UNIQUE"
    }

    ITINERARY {
        bigint id PK
        bigint user_id FK "ON DELETE CASCADE"
        bigint contest_id FK "ON DELETE RESTRICT"
        varchar title
        varchar event "CHECK K5 / K10 / HALF / FULL"
        jsonb themes "영문 Enum 배열 스냅샷"
        date start_date
        date end_date
        varchar hotel_name "nullable, 선택 숙소 스냅샷"
        numeric hotel_lat "nullable, NUMERIC(10,7)"
        numeric hotel_lng "nullable, NUMERIC(10,7)"
        varchar region_snapshot "저장 시점 17개 시도"
        varchar recovery_label "nullable, 저장 시점"
        text recovery_note "nullable, 저장 시점"
        derived contest_name "현재 CONTEST.name"
        derived current_contest "현재 날짜·시간·장소·지역·좌표·active"
        derived needs_regeneration "이름·active 제외, RACE/region snapshot과 현재값 비교"
        timestamptz created_at
        timestamptz updated_at "user_id, contest_id, start_date, end_date 복합 UNIQUE"
    }

    ITINERARY_DAY {
        bigint id PK
        bigint itinerary_id FK "ON DELETE CASCADE"
        int day_index "대회일 상대 오프셋(-N..+N), UNIQUE(itinerary_id, day_index)"
        date day_date
        boolean recovery
        text note "nullable"
    }

    ITINERARY_BLOCK {
        bigint id PK
        bigint day_id FK "ON DELETE CASCADE"
        bigint contest_id FK "nullable, RACE만 사용, ON DELETE RESTRICT"
        varchar block_type "CHECK USER / RACE"
        boolean system_managed "RACE=true, USER=false"
        int order_no "UNIQUE(day_id, order_no), RACE 위치 고정"
        time start_time
        varchar title
        varchar category "CHECK TOUR / FOOD / CAFE / WELLNESS / NATURE / HISTORY / LODGING / RACE / RECOVERY"
        varchar place_name "nullable, 외부 POI 부분 실패 허용"
        varchar address "nullable"
        numeric lat "nullable, NUMERIC(10,7)"
        numeric lng "nullable, NUMERIC(10,7)"
        text description "nullable"
    }

    SAVED_COURSE {
        bigint id PK
        bigint user_id FK "ON DELETE CASCADE"
        varchar route_fingerprint "VARCHAR(67), UNIQUE(user_id, route_fingerprint), v1: + SHA-256 lowercase hex"
        varchar data_source "CHECK API_GPX / GPX_ONLY / OSM_GENERATED"
        varchar source_course_id "nullable, 큐레이션 원본만 사용"
        varchar course_name "저장 시점 이름 스냅샷"
        varchar region "nullable, OSM_GENERATED는 생략"
        numeric distance_km "NUMERIC(8,3)"
        int duration_min
        varchar difficulty "CHECK EASY / NORMAL / HARD"
        int gain_m
        jsonb elevation_profile_m "NOT NULL DEFAULT '[]', 최대 100개 정수 미터 배열"
        jsonb attributions "NOT NULL DEFAULT '[]', 서버 생성 완성 문구 snapshot"
        numeric entry_lat "NUMERIC(10,7)"
        numeric entry_lng "NUMERIC(10,7)"
        text path_polyline
        timestamptz saved_at
    }
